# astrape

./: .gitignore  Cargo.toml  README.md
admin-utils/: Cargo.toml
admin-utils/src/: admin_deposit_interest.rs  initialize.rs  lib.rs  update_config.rs
client/: .env.example  .gitignore  .huskyrc  README.md  next.config.mjs  package-lock.json  package.json
client/src/app/: design-system.css  globals.scss  layout.tsx  page.tsx
client/src/app/claim/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/deposit/: modal.tsx  page.tsx
client/src/app/mint/: page.tsx
client/src/components/CryptoInput/: CryptoInput.tsx  styles.module.scss
client/src/components/Header/: Header.tsx
client/src/components/Mint/Modals/: ConfirmDeposit.tsx  ConfirmWithdraw.tsx
client/src/components/MobileMenu/: MobileMenuPanel.tsx
client/src/components/PortfolioV2/Modals/: Redeem.tsx
client/src/components/Socials/: Socials.tsx
client/src/components/Widgets/MintWidget/: styles.module.scss
client/src/constants/: deposit.ts
client/src/hooks/astrape/: useAstrape.ts
client/src/program/: instructions.ts
client/src/schemas/: astrape.ts
client/src/stores/: persistentStore.ts
client/src/types/: astrape.ts  deposit.ts
client/src/utils/: deposit.ts  interaction.ts  misc.ts  notification.tsx  pda.ts
client/src/utils/indexedDB/: index.ts
client/src/zplClient/: index.ts  instruction.ts  rpcClient.ts
deploy-initializer/: Cargo.toml
deploy-initializer/src/: main.rs
program/: .gitignore  Cargo.toml
program/src/: errors.rs  instructions.rs  lib.rs  processor.rs  state.rs
program/tests/: integration.rs
src/: errors.rs  lib.rs  state.rs
tests/: integration.rs
