[package]
name = "astrape-admin-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
astrape = { path = "../program" }
solana-sdk = "1.17.0"
solana-client = "1.17.0"
solana-program = "1.17.0"
solana-cli-config = "1.17.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
borsh = "0.10.3"
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }

[[bin]]
name = "initialize"
path = "src/initialize.rs" 

[[bin]]
name = "update-config"
path = "src/update_config.rs"

[[bin]]
name = "admin-deposit-interest"
path = "src/admin_deposit_interest.rs"

