cargo-features = ["edition2024"]

[package]
name = "breakout_contract"
version = "0.1.0"
edition = "2021"
description = "Token lock contract for Solana"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
testnet = []
devnet = []
cpi = ["no-entrypoint"]
test-bpf = []

[dependencies]
borsh = "0.10.3"
solana-program = "1.17.0"
solana-sdk = { version = "1.17.0", optional = true }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
thiserror = "1"

[dev-dependencies]
env_logger = "0.11.5"
log = "0.4.20"
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.14.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
