cargo-features = ["edition2024"]

[package]
name = "astrape"
version = "0.1.0"
edition = "2021"
description = "Astrape contract for Solana Breakout Hackathon"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
testnet = []
devnet = []
cpi = ["no-entrypoint"]
test-bpf = []

[dependencies]
borsh = "0.10.3"
solana-program = "2"
spl-token = { version = "8", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }

pyth-solana-receiver-sdk = "0.6.1"
thiserror = "1"

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
env_logger = "0.11.5"
log = "0.4.20"
solana-sdk = "2"
solana-program-test = "2"
tokio = { version = "1.14.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
